istio-vsc/kiali-vsc.yaml
# ingress gateway에 포트번호 열어둘것
# kubectl apply -n rp-istio $KC
---
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: kiali-dev-vs
spec:
  hosts: 
    - dev.realpacking.com
  gateways:
    - istio-system/internal-istio-ingressgateway  #4. Gateway name
  http:
  - match:
    - port: 20001
    route:
    - destination:
        host: kiali.istio-system.svc.cluster.local     
        port:
          number: 20001
---
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: kiali-internal
spec:
  host: kiali.istio-system.svc.cluster.local   
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
